erDiagram

  %% ==== USERS ====
  users {
    string id PK
    string name
    string email
    string password
    string role              %% student|instructor|admin
    datetime created_at
    datetime updated_at
  }

  %% ==== COURSES ====
  courses {
    string id PK
    string title
    text description
    boolean is_paid
    string created_by FK
    datetime created_at
    datetime updated_at
  }

  topics {
    string id PK
    string course_id FK
    string title
    int order
    datetime created_at
  }

  lessons {
    string id PK
    string topic_id FK
    string title
    string video_url
    text content
    datetime created_at
  }

  %% ==== QUIZZES ====
  quizzes {
    string id PK
    string topic_id FK
    string title
    int duration_minutes       %% NULL nếu không dùng timer
    boolean shuffle_questions
    boolean shuffle_options
    int max_attempts
    datetime created_at
  }

  %% ==== QUESTIONS (single/multi) ====
  questions {
    string id PK
    string quiz_id FK
    string type                %% 'single' | 'multi'
    text text                  %% nội dung câu hỏi
    json options               %% [{key:'A',label:'...'}, ...]
    json correct_options       %% ['A'] hoặc ['A','C']
    decimal weight             %% mặc định = 1
  }

  %% ==== QUIZ ATTEMPTS / SCORING ====
  quiz_attempts {
    string id PK
    string user_id FK
    string quiz_id FK
    int attempt_no
    string status              %% 'submitted'
    decimal score
    decimal max_score
    datetime started_at
    datetime submitted_at
  }

  quiz_attempt_answers {
    string id PK
    string attempt_id FK
    string question_id FK
    json selected_options
    boolean is_correct
    decimal points_awarded
  }

  %% ==== FLASHCARDS ====
  flashcards {
    string id PK
    string topic_id FK
    string front
    string back
    string image_url
    string audio_url
  }

  flashcard_logs {
    string id PK
    string user_id FK
    string flashcard_id FK
    datetime reviewed_at
  }

  %% ==== PROGRESS & ACCESS ====
  user_progress {
    string user_id PK
    string course_id PK
    float progress_percent
    datetime last_updated
  }

  user_courses {
    string user_id PK
    string course_id PK
    datetime enrolled_at
    boolean is_paid
    datetime access_expires_at
  }

  %% ==== E-COMMERCE ====
  orders {
    string id PK
    string user_id FK
    string coupon_id FK
    decimal total_price
    decimal discount_amount
    decimal final_price
    datetime created_at
    string status              %% pending|paid|cancelled|refunded|failed
  }

  order_items {
    string id PK
    string order_id FK
    string course_id FK
    decimal price_at_purchase
  }

  transactions {
    string id PK
    string order_id FK
    decimal amount
    string status              %% initiated|succeeded|failed|refunded
    string provider
    string transaction_code
    datetime created_at
  }

  coupons {
    string id PK
    string code
    string type                %% percent|fixed
    decimal value
    int usage_limit
    int used_count
    decimal min_order_amount
    datetime valid_from
    datetime valid_to
    boolean is_active
    string description
  }

  coupon_usages {
    string id PK
    string coupon_id FK
    string user_id FK
    string order_id FK
    datetime used_at
  }

  %% ==== BLOG ====
  blog_posts {
    string id PK
    string user_id FK
    string title
    text content
    string cover_image
    datetime published_at
    datetime updated_at
  }

  blog_comments {
    string id PK
    string post_id FK
    string user_id FK
    string parent_id FK
    text content
    datetime created_at
  }

  %% ==== CHAT ====
  chat_threads {
    string id PK
    boolean is_group
    string title
    string created_by FK
    datetime created_at
  }

  chat_participants {
    string id PK
    string thread_id FK
    string user_id FK
    datetime joined_at
  }

  chat_messages {
    string id PK
    string thread_id FK
    string sender_id FK
    text message
    datetime sent_at
  }

  %% ==== RELATIONSHIPS ====

  users ||--o{ courses : creates
  users ||--o{ user_progress : tracks
  users ||--o{ user_courses : enrolls
  users ||--o{ orders : places
  users ||--o{ coupon_usages : uses
  users ||--o{ blog_posts : writes
  users ||--o{ blog_comments : comments
  users ||--o{ chat_threads : creates
  users ||--o{ chat_messages : sends
  users ||--o{ flashcard_logs : reviews
  users ||--o{ quiz_attempts : attempts
  users ||--o{ quiz_results : answers

  courses ||--o{ topics : contains
  courses ||--o{ course_prices : has
  courses ||--o{ user_courses : includes
  courses ||--o{ order_items : purchased

  topics ||--o{ lessons : has
  topics ||--o{ quizzes : includes
  topics ||--o{ flashcards : includes

  quizzes ||--o{ questions : contains
  quizzes ||--o{ quiz_attempts : has
  quiz_attempts ||--o{ quiz_attempt_answers : includes
  questions ||--o{ quiz_attempt_answers : answered_as
  quizzes ||--o{ quiz_results : evaluated

  flashcards ||--o{ flashcard_logs : logged

  orders ||--o{ order_items : contains
  orders ||--|| transactions : has
  orders ||--o{ coupon_usages : applies
  orders }o--|| coupons : uses
  coupons ||--o{ coupon_usages : tracked

  blog_posts ||--o{ blog_comments : has
  blog_comments ||--o{ blog_comments : replies

  chat_threads ||--o{ chat_participants : includes
  chat_threads ||--o{ chat_messages : contains
